# Vscode-Python-Config

./: .editorconfig  .gitignore  CHANGELOG.md  CHANGELOG_OLD.md  LICENSE  Makefile  README.md  package.json  tsconfig.json
src/: extension.ts
src/utils/: fileUtils.ts  settings.ts  systemUtils.ts  types.ts  vscodeUtils.ts
templates/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bump.txt  launch.json  mkdocs.yaml  pyproject.toml  pyproject_ruff_aggressive.toml  pyproject_ruff_standard.toml  requirements-dev.txt  settings.json  setup.cfg  tasks.json
templates/docs/: api.md  index.md
test/testAssets/Python/: setup.cfg
test/unitTest/: runTest.ts
test/unitTest/suite/: index.ts  utils.test.ts
tests/FullProject/: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
tests/FullProject/docs/: api.md  index.md
tests/FullProject/tests/: test_vector.py
tests/SetupProject/: setup.py
tests/SimpleRepo/: .pre-commit-config.yaml  main.py  pyproject.toml
tests/SimpleRepo/docs/: docs.py
